--- a/.github/workflows/appengine-deploy.yml
+++ b/.github/workflows/appengine-deploy.yml
@@ -46,6 +46,8 @@ jobs:
 
   deplay-staging:
     name: GAE deplay
+    needs: [fron-build, back-build]
+    if: success()
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
