--- a/.github/workflows/appengine-deploy.yml
+++ b/.github/workflows/appengine-deploy.yml
@@ -13,11 +13,11 @@ jobs:
         with:
           node-version: '16.x'
       - name: Save the api key
-        run: envsubst < ${{ secrets.API_KEY_FOR_BACK }} > api_key.json
+        run: envsubst < env.SECRET_FILE > api_key.json
         env:
           SECRET_FILE: ${{ secrets.API_KEY_FOR_BACK }}
       - name: Save the sa key
-        run: envsubst < ${{ secrets.SA_KEY_FOR_BACK }} > credential.json
+        run: envsubst < env.SECRET_FILE > credential.json
         env:
           SECRET_FILE: ${{ secrets.SA_KEY_FOR_BACK }}
       - run: npm ci
@@ -35,9 +35,9 @@ jobs:
         with:
           node-version: '16.x'
       - name: Save the environment
-        run: envsubst < ${{ secrets.ENV_FOR_FRONT }} > src/environments/environment.prod.ts
+        run: envsubst < env.SECRET_FILE > src/environments/environment.prod.ts
         env:
-          SECRET_FILE: ${{ secrets.ENV_FOR_FRONT }}
+          SECRET_FILE: secrets.ENV_FOR_FRONT
         working-directory: ./front
       - run: npm ci
         working-directory: ./front
