--- a/.github/workflows/appengine-deploy.yml
+++ b/.github/workflows/appengine-deploy.yml
@@ -41,6 +41,10 @@ jobs:
         run: echo env.SECRET_FILE > src/environments/environment.prod.ts
         env:
           SECRET_FILE: ${{ secrets.ENV_FOR_FRONT }}
+      - name: Save the environment
+        run: echo env.SECRET_FILE > src/environments/environment.ts
+        env:
+          SECRET_FILE: ${{ secrets.ENV_FOR_FRONT }}
         working-directory: ./front
       - run: npm ci
         working-directory: ./front
