--- a/.github/workflows/appengine-deploy.yml
+++ b/.github/workflows/appengine-deploy.yml
@@ -47,6 +47,9 @@ jobs:
         env:
           SECRET_FILE: ${{ secrets.ENV_FOR_FRONT }}
         working-directory: ./front
+      - name: cat
+        run: cat src/environments/environment.ts
+        working-directory: ./front
       - run: npm ci
         working-directory: ./front
       - run: npm run build
