--- a/back/app.yaml
+++ b/back/app.yaml
@@ -4,13 +4,13 @@ handlers:
   - url: /api/.*
     script: auto
   - url: /
-    static_files: ../front/build/index.html
-    upload: ../front/build/index.html
+    static_files: /front/index.html
+    upload: /front/index.html
 
   - url: /(.*\.(json|ico|js|css|txt))$
-    static_files: ../front/build/\1
-    upload: ../front/build/.*\.(json|ico|js|css|txt)$
+    static_files: /front/\1
+    upload: /front/.*\.(json|ico|js|css|txt)$
 
   - url: /.*
-    static_files: ../front/build/index.html
-    upload: ../front/build/index.html
+    static_files: /front/index.html
+    upload: /front/index.html
