--- a/back/app.yaml
+++ b/back/app.yaml
@@ -11,6 +11,9 @@ handlers:
     static_files: /front/\1
     upload: /front/.*\.(json|ico|js|css|txt)$
 
-  - url: /.*
+  - url: .*
     static_files: /front/index.html
     upload: /front/index.html
+automatic_scaling:
+  min_idle_instances: automatic
+  max_idle_instances: 1
