--- a/back/app.yaml
+++ b/back/app.yaml
@@ -1,8 +1,6 @@
 runtime: nodejs14
 entrypoint: node app.js
 handlers:
-  - url: /api/.*
-    script: auto
   - url: /
     static_files: /front/index.html
     upload: /front/index.html
@@ -14,6 +12,9 @@ handlers:
   - url: .*
     static_files: /front/index.html
     upload: /front/index.html
+  - url: /api/.*
+    script: app.js
+
 automatic_scaling:
   min_idle_instances: automatic
   max_idle_instances: 1
