--- a/front/package.json
+++ b/front/package.json
@@ -11,16 +11,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.0",
-    "@angular/cdk": "^14.1.0",
+    "@angular/cdk": "^14.1.2",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/fire": "^7.4.1",
     "@angular/forms": "^14.0.0",
-    "@angular/material": "^14.1.0",
+    "@angular/material": "^14.1.2",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@angular/service-worker": "^14.0.0",
     "ngx-indexed-db": "^11.0.2",
     "ngx-skeleton-loader": "^5.0.0",
     "rxjs": "~7.5.0",
