--- a/front/angular.json
+++ b/front/angular.json
@@ -26,8 +26,6 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/manifest.webmanifest",
-              "src/manifest.webmanifest",
               "src/manifest.webmanifest"
             ],
             "styles": [
@@ -35,12 +33,9 @@
               "src/styles.scss"
             ],
             "scripts": [],
-            "allowedCommonJsDependencies": [
-              "firebase",
-              "@firebase/database"
-            ],
+            "allowedCommonJsDependencies": ["firebase", "@firebase/database"],
             "serviceWorker": true,
-            "ngswConfigPath": "front/ngsw-config.json"
+            "ngswConfigPath": "ngsw-config.json"
           },
           "configurations": {
             "production": {
@@ -104,6 +99,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
+              "src/manifest.webmanifest",
               "src/manifest.webmanifest",
               "src/manifest.webmanifest",
               "src/manifest.webmanifest"
