--- a/front/angular.json
+++ b/front/angular.json
@@ -28,10 +28,7 @@
               "src/assets",
               "src/manifest.webmanifest"
             ],
-            "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.scss"
-            ],
+            "styles": ["src/style/theme.scss", "src/styles.scss"],
             "scripts": [],
             "allowedCommonJsDependencies": ["firebase", "@firebase/database"],
             "serviceWorker": true,
