--- a/front/package.json
+++ b/front/package.json
@@ -25,6 +25,7 @@
     "ngx-indexed-db": "^11.0.2",
     "ngx-skeleton-loader": "^5.0.0",
     "rxjs": "~7.5.0",
+    "swiper": "^8.3.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
