--- a/front/package.json
+++ b/front/package.json
@@ -25,6 +25,7 @@
     "ngx-indexed-db": "^11.0.2",
     "ngx-skeleton-loader": "^5.0.0",
     "rxjs": "~7.5.0",
+    "socket.io-client": "^4.5.1",
     "swiper": "^8.3.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -34,6 +35,7 @@
     "@angular/cli": "~14.0.1",
     "@angular/compiler-cli": "^14.0.0",
     "@types/jasmine": "~4.0.0",
+    "@types/socket.io-client": "^3.0.0",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
