--- a/front/package.json
+++ b/front/package.json
@@ -21,10 +21,10 @@
     "@angular/platform-browser-dynamic": "^15.1.3",
     "@angular/router": "^15.1.3",
     "@angular/service-worker": "^15.1.3",
+    "keen-slider": "^6.8.5",
     "ngx-indexed-db": "^11.0.2",
     "ngx-skeleton-loader": "^7.0.0",
     "rxjs": "~7.8.0",
-    "swiper": "^9.0.3",
     "tslib": "^2.5.0",
     "zone.js": "~0.12.0"
   },
